Fixes ZEN-2182 forcing overflow auto on those sub panels using css since ext autoscroll was ignored. reviewed by jhanson.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@59720 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/zenoss.css
@@ -1590,3 +1590,7 @@ pre {
 #searchbox-container .searchfield-black .x-form-field{
   color: white !important;
 }
+/* adding a scrollbar on the components details */
+#component_card #edit_panel-body{
+    overflow:auto;
+}
